<resources>
    <string name="app_name">Punchit.io</string>
    <string name="title_activity_welcome">welcome</string>
    <string name="title_activity_textview">textview</string>
    <string name="app_id">811805505603331</string>
    <string name="title_activity_fbninja">fbninja</string>
    <string name="optionsNext">Next></string>
    <string name="Interest">Interest</string>
    <string name="tagline">Where your opinion matters!</string>
    <string name="fb_login">Facebook Login</string>
    <string name="or">Or</string>
    <string name="emailId">Email-Id or Username</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="login">Login</string>
    <string name="signUp">Sign Up</string>
    <string name="randomText">Random text</string>
    <string name="add">Add</string>
    <string name="chooseImage">Choose Image</string>
    <string name="emailOnly">Email-Id</string>
    <string name="ninja_name">Ninja Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name">Name</string>
    <string name="time">TimeHere</string>
    <string name="search">Search Interest..</string>
    <string name="enter_title">Enter Title</string>
    <string name="post1_select">Select Post 1</string>
    <string name="title1">Title 1</string>
    <string name="tag_community">Tag Community</string>
    <string name="done">Done!</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="log_out">Log Out!</string>
</resources>
