<RelativeLayout
    android:id="@+id/rl_login_signup"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/primary">


    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/app_name"
        android:src="@mipmap/punchit_main"
        android:id="@+id/imageView2"
        android:layout_marginTop="10dp"
        android:layout_alignStart="@+id/imageView3" />

    <ImageView
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:contentDescription="@string/tagline"
        android:src="@mipmap/tag2"
        android:id="@+id/imageView3"
        android:layout_below="@+id/imageView2"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:id="@+id/ib_fblogin"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:contentDescription="@string/fb_login"
        android:onClick="fb"
        android:src="@mipmap/fb_logo"
        android:layout_below="@+id/imageView3"
        android:layout_alignStart="@+id/bt_forgetPass" />

    <View
        android:layout_width="130dp"
        android:layout_height="1dp"
        android:background="#fff"
        android:layout_centerVertical="true"
        android:layout_alignEnd="@+id/input_layout_email"
        android:id="@+id/view" />


    <View
        android:layout_width="130dp"
        android:layout_height="1dp"
        android:background="#fff"
        android:layout_alignTop="@+id/view"
        android:layout_alignStart="@+id/input_layout_email" />

    <TextView
        android:id="@+id/tv_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textColor="#fff"
        android:textSize="25sp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/tv_or"
        android:layout_centerHorizontal="true">

        <EditText
            android:id="@+id/et_emailId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/emailId"
            android:inputType="textEmailAddress"
            android:layout_below="@+id/tv_or"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_layout_email"
        android:layout_centerHorizontal="true">


        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_below="@+id/et_emailId"
            android:layout_alignParentStart="true"
            android:layout_marginTop="19dp" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/bt_forgetPass"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:onClick="forget"
        android:text="@string/forget_password"
        android:layout_above="@+id/bt_login"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/bt_login"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:background="@color/primary_dark"
        android:text="@string/login"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />


    <Button
        android:id="@+id/bt_signUp"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:background="@color/primary_dark"
        android:text="@string/signUp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />




</RelativeLayout>
